# vcf2maf

./: .gitignore  Dockerfile  Dockerfile.update  README.md  maf2maf.pl  pyproject.toml  vcf2maf.pl  vcf2maf.toml.example
tests/: README.md  download_references.sh  test_upstream_docker.py
vcf2maf/: __init__.py  config.py  constants.py  maf2maf.py  maf2vcf.py  vcf2maf.py  vcf2vcf.py
